[project]
name = "dnd-characters"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Marcus", email = "marcus@mdmeier.com" }
]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.119.0",
    "uvicorn>=0.38.0",
]

[project.scripts]
dnd-characters = "dnd_characters:main"

[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]
